Fixed the dark mode, scroll up buton problem
added margin to scroll to up button, Added emoji and margins to dark mode toggle button.

--- a/style.css
+++ b/style.css
@@ -608,6 +608,7 @@ body {
   color: white;
   font-size: 22px;
   border-radius: 50%;
+  margin-right: 40px;
 }
 .gotopbtn {
   background-position: center;
